#266 - Fixed more options z-index issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2094,7 +2094,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 		.media-folder_actions .media-folder_action__list {
 			display: block;
-			z-index: 112;
+			z-index: 1122;
 		}
 	}
 
